--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vydia.RNUploader">
+
+    <application
+        android:name=".UploaderApplication">
+        <!-- No other attributes needed for a library module -->
+    </application>
+
 </manifest>
