--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,13 +1,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.vydia.RNUploader">
 
-    <!-- Add required permissions -->
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
-        android:maxSdkVersion="28"/> <!-- Only needed up to Android 9 -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32"/> <!-- Only needed up to Android 13 -->
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" /> <!-- For Android 9+ -->
+ <application>
+        <!-- Other stuff if needed -->
 
-    <!-- No application tag needed -->
+        <provider
+            android:name="com.vydia.RNUploader.UploadInitProvider"
+            android:authorities="${applicationId}.rnuploadinitprovider"
+            android:exported="false"
+            android:multiprocess="false" />
+    </application>
 </manifest>
